Name:                accountli
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable accountli
  hs-source-dirs: src
  main-is: Main.hs
  default-extensions:
    OverloadedStrings

  other-modules: Application, Site

  Build-depends:
    bytestring,
    heist,
    map-syntax,
    monad-control,
    mtl,
    snap,
    snap-core,
    snap-server,
    snap-loader-static,
    snaplet-postgresql-simple,
    postgresql-simple,
    postgresql-simple-migration,
    text,
    time,
    xmlhtml

  if flag(old-base)
    build-depends:
      base,
      lens
  else
    build-depends:
      base,
      lens

  if flag(development)
    build-depends:
      snap-loader-dynamic
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
