name:                accountli
version:             0.1
synopsis:            Project Synopsis Here
description:         Project Description Here
license:             AllRightsReserved
author:              Silvio Böhler
maintainer:          sboehler@gmail.com
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag development
  description: Whether to build the server in development (interpreted) mode
  default: False

executable accountli
  hs-source-dirs:
    src
  main-is:
    Main.hs
  default-extensions:
    OverloadedStrings,
    TemplateHaskell,
    DeriveGeneric,
    FlexibleInstances
  other-modules:
    Accountli.Application,
    Accountli.Snaplet.Migration,
    Accountli.Snaplet.Api,
    Accountli.Snap.Extras,
    Site
  build-depends:
    bytestring,
    heist,
    map-syntax,
    monad-control,
    mtl,
    aeson,
    filepath,
    snap,
    snap-core,
    snap-server,
    snap-loader-static,
    snaplet-postgresql-simple,
    postgresql-simple,
    postgresql-simple-migration,
    text,
    time,
    xmlhtml,
    base,
    lens

  if flag(development)
    -- note: doesn't work with stack
    build-depends:
      snap-loader-dynamic
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
